--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
       <h1>Cookies inc</h1>
     </header>
-    <main>
+    <main class="mainContainer">
       <!-- column/row 1 - the game  -->
-      <div id="gameWindow">
+      <div class="mainColumn" id="gameWindow">
         <h1 id="cookieTotal">0 total cookies</h1>
         <h2 id="cookiesPerSecond">0 CPS (Cookies per second)</h2>
         <!-- the start button is the cookie -->
@@ -21,7 +21,7 @@
         <button id="reset">Reset</button>
       </div>
       <!-- column/row 2 - the shop  -->
-      <div id="storeWindow">
+      <div class="mainColumn" id="storeWindow">
         <h2>Store</h2>
         <div class="shopItemContainer"></div>
       </div>
